--- a/week 2/Tugas javascript lanjutan part 1/index.html
+++ b/week 2/Tugas javascript lanjutan part 1/index.html
@@ -6,6 +6,6 @@
         </title>
     </head>
     <body>
-        <script src="tugas 1.js"></script> <!-- masukkan source js disini-->
+        <script src="callback.js"></script> <!-- masukkan source js disini-->
     </body>
 </html>
